--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vite": "^6.2.0"
   },
   "dependencies": {
+    "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow-models/mobilenet": "^2.1.1",
     "@tensorflow/tfjs": "^4.22.0",
     "meyda": "^5.6.3"
   }
